...


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:background="@color/cardview_shadow_end_color"
                android:textColorHighlight="@color/cardview_dark_background"
...
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:background="@color/cardview_shadow_end_color"
                android:textColorHighlight="@color/cardview_dark_background"
...
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_login"
            android:text="@string/login"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/purple_200"
            app:cornerRadius = "20dp"
...
