<!-- <?xml version="1.0" encoding="utf-8"?> -->
<!-- Main Page
    * location selector
    * location adder
    * settings -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="CS427 Project App" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="UserNamePlaceholder"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/ic_settings"
                android:contentDescription="@string/settings_button_description" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity='center'
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_gravity="center">
            </Spinner>
            <ImageButton
                android:id="@+id/buttonRemoveLocation"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_trash"
                android:contentDescription="@string/remove_button_description" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity='center'
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonViewWeather"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="View Weather" />
            <Button
                android:id="@+id/buttonViewMap"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="View Map" />
        </LinearLayout>
        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a location" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change UI Theme" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/logout" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
